--- a/Koha/Plugin/Com/ByWaterSolutions/EdifactIngram/configure.tt
+++ b/Koha/Plugin/Com/ByWaterSolutions/EdifactIngram/configure.tt
@@ -142,6 +142,21 @@ $( document ).ready(function() {
               </ol>
             </fieldset>
 
+            <fieldset class="rows">
+              <legend>GIR values</legend>
+              <ol>
+                <li>
+                   <label for="gir_mapping">ISBN-13: </label>
+                   <textarea name="gir_mapping" id="gir_mapping" rows="10" cols="50">[% gir_mapping %]</textarea>
+                </li>
+                List GIR fields a a list of key value pairs, where the key is the GIR segment tag and the value is the item field name i.e.
+                <pre>
+                    LLO: homebranch
+                    LST: itype
+                </pre>
+              </ol>
+            </fieldset>
+
             <p>
 
             <input type="hidden" name="save" value="1" />
