Add ability to set a custom file suffix for invoice files.
Conflicts:
	Koha/Plugin/Com/ByWaterSolutions/EdifactEnhanced.pm

--- a/Koha/Plugin/Com/ByWaterSolutions/EdifactEnhanced/configure.tt
+++ b/Koha/Plugin/Com/ByWaterSolutions/EdifactEnhanced/configure.tt
@@ -97,6 +97,10 @@ $( document ).ready(function() {
                    <label for="order_file_suffix">Order file: </label>
                    <input type="text" name="order_file_suffix" id="order_file_suffix" size="20" maxlength="90" value="[% order_file_suffix %]">
                 </li>
+                <li>
+                   <label for="invoice_file_suffix">Invoice file: </label>
+                   <input type="text" name="invoice_file_suffix" id="invoice_file_suffix" size="20" maxlength="90" value="[% invoice_file_suffix %]">
+                </li>
               </ol>
             </fieldset>
 
