--- a/Koha/Plugin/Com/ByWaterSolutions/EdifactEnhanced/configure.tt
+++ b/Koha/Plugin/Com/ByWaterSolutions/EdifactEnhanced/configure.tt
@@ -229,15 +229,23 @@ $( document ).ready(function() {
                    <input type="checkbox" name="ship_budget_from_orderline" id="ship_budget_from_orderline" value="1" [% IF ship_budget_from_orderline %]checked="checked"[% END %]>
                    <span class="hint">Set the invoice shipping cost fund to the fund used for the last order line of an invoice.</span>
                 </li>
+
                 <li>
                    <label for="close_invoice_on_receipt">Close invoice on receipt: </label>
                    <input type="checkbox" name="close_invoice_on_receipt" id="close_invoice_on_receipt" value="1" [% IF close_invoice_on_receipt %]checked="checked"[% END %]>
                    <span class="hint">When an invoice is recieved, set it to closed automatically.</span>
                 </li>
+
                 <li>
                    <label for="add_itemnote_on_receipt">Add item note receipt: </label>
                    <input type="checkbox" name="add_itemnote_on_receipt" id="add_itemnote_on_receipt" value="1" [% IF add_itemnote_on_receipt %]checked="checked"[% END %]>
                    <span class="hint">When an item is recieved via EDIFACT, set the item's nonpublic note to "Recieved via EDIFACT".</span>
+                </li>
+
+                <li>
+                   <label for="no_update_item_price">Don't update item price: </label>
+                   <input type="checkbox" name="no_update_item_price" id="no_update_item_price" value="1" [% IF no_update_item_price %]checked="checked"[% END %]>
+                   <span class="hint">Do <em>not</em> update the item's price based on the item price in the recieved invoice.</span>
                 </li>
               </ol>
             </fieldset>
