--- a/Koha/Plugin/Com/ByWaterSolutions/EdifactEnhanced/configure.tt
+++ b/Koha/Plugin/Com/ByWaterSolutions/EdifactEnhanced/configure.tt
@@ -284,6 +284,12 @@ function check_if_buyer_san_use_username() {
                 </li>
 
                 <li>
+                   <label for="shipment_charges_moa_304">Shipping - MOA+304: </label>
+                   <input type="checkbox" name="shipment_charges_moa_304" id="shipment_charges_moa_304" value="1" [% IF shipment_charges_moa_304 %]checked="checked"[% END %]>
+                   <span class="hint">Add MOA charges with a qualifier 304 to the shipping cost for an invoice.</span>
+                </li>
+
+                <li>
                    <label for="close_invoice_on_receipt">Close invoice on receipt: </label>
                    <input type="checkbox" name="close_invoice_on_receipt" id="close_invoice_on_receipt" value="1" [% IF close_invoice_on_receipt %]checked="checked"[% END %]>
                    <span class="hint">When an invoice is recieved, set it to closed automatically.</span>
