--- a/Koha/Plugin/Com/ByWaterSolutions/EdifactEnhanced/configure.tt
+++ b/Koha/Plugin/Com/ByWaterSolutions/EdifactEnhanced/configure.tt
@@ -323,13 +323,13 @@ function check_if_buyer_san_use_library_ean_split_first_part() {
                 <li>
                    <label for="close_invoice_on_receipt">Close invoice on receipt: </label>
                    <input type="checkbox" name="close_invoice_on_receipt" id="close_invoice_on_receipt" value="1" [% IF close_invoice_on_receipt %]checked="checked"[% END %]>
-                   <span class="hint">When an invoice is recieved, set it to closed automatically.</span>
+                   <span class="hint">When an invoice is received, set it to closed automatically.</span>
                 </li>
 
                 <li>
                    <label for="add_itemnote_on_receipt">Add item note receipt: </label>
                    <input type="checkbox" name="add_itemnote_on_receipt" id="add_itemnote_on_receipt" value="1" [% IF add_itemnote_on_receipt %]checked="checked"[% END %]>
-                   <span class="hint">When an item is recieved via EDIFACT, set the item's nonpublic note to "Recieved via EDIFACT".</span>
+                   <span class="hint">When an item is received via EDIFACT, set the item's nonpublic note to "Received via EDIFACT".</span>
                 </li>
 
                 <li>
@@ -340,7 +340,7 @@ function check_if_buyer_san_use_library_ean_split_first_part() {
                        <option value="update_price" [% IF no_update_item_price == 'update_price' %]selected="selected"[% END %]>Update price only</option>
                        <option value="update_replacementprice" [% IF no_update_item_price == 'update_replacementprice' %]selected="selected"[% END %]>Update replacement price only</option>
                    </select>
-                   <span class="hint">Do <em>not</em> update the item prices based on the item price in the recieved invoice.</span>
+                   <span class="hint">Do <em>not</em> update the item prices based on the item price in the received invoice.</span>
                 </li>
 
                 <li>
